feat: Made engine to expose chain HTTP triggers with two prefixes: /routes and /${app.name}-routes.
It eliminates the need to rewrite prefix in HTTPRoute CRs.

@cf_skip